--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -132,6 +132,9 @@
                 class="form-control"
                 maxlength="50"
                 placeholder="Số điện thoại"
+                data-toggle="tooltip"
+                data-placement="top"
+                title='Độ dài 6-15 ký tự, bắt đầu bằng "0" hoặc mã vùng'
               />
               <div class="input-group-append">
                 <div class="input-group-text">
