--- a/src/main/resources/templates/test-query.html
+++ b/src/main/resources/templates/test-query.html
@@ -139,6 +139,8 @@
   <!-- ChartJS -->
   <script src="/plugins/chart.js/Chart.min.js"></script>
 
+  <script src="/dist/js/services/refreshTokenService.js"></script>
+
   <script src="/dist/js/demo.js" defer></script>
   <script src="/dist/js/pages/test-query.js"></script>
 </body>
