--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -80,7 +80,7 @@
 
         <li class="nav-item">
           <a href="#" class="nav-link" id="user-management">
-            <i class="nav-icon fa-solid fa-users-viewfinder"></i>
+            <i class="nav-icon fa-solid fa-users-line"></i>
             <p>
               Quản lý người dùng
               <i class="fas fa-angle-left right"></i>
@@ -95,15 +95,20 @@
                 id="user-management_user-list"
               >
               <i class="nav-icon fa-solid fa-address-book"></i>
-                <p>Danh sách người dùng</p>
+                <p>Danh sách hồ sơ</p>
               </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
-              <a href="/blank.html" class="nav-link" id="category-management_blank">
-                <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
-                <p>Blank page</p>
+            <li class="nav-item">
+              <a
+                href="/account-list"
+                class="nav-link"
+                id="user-management_account-list"
+              >
+              <i class="nav-icon fa-solid fa-id-card"></i>
+                <p>Danh sách tài khoản</p>
               </a>
             </li>
+           
           </ul>
         </li>
 
