--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -44,6 +44,13 @@
         </li>
 
         <li class="nav-item">
+          <a href="/cars" class="nav-link" id="cars">
+            <i class="nav-icon fa-solid fa-truck-pickup"></i>
+            <p>Danh sách xe</p>
+          </a>
+        </li>
+
+        <li class="nav-item">
           <a href="#" class="nav-link" id="category-management">
             <i class="nav-icon fa-solid fa-gears"></i>
             <p>
