--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -70,6 +70,26 @@
                 <p>Danh mục mẫu xe</p>
               </a>
             </li>
+            <li class="nav-item">
+              <a
+                href="/option-list"
+                class="nav-link"
+                id="category-management_option-list"
+              >
+              <i class="nav-icon fa-solid fa-list-ol"></i>
+                <p>Danh mục option</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="/service-list"
+                class="nav-link"
+                id="category-management_service-list"
+              >
+              <i class="nav-icon fa-solid fa-check-to-slot"></i>
+                <p>Danh mục dịch vụ</p>
+              </a>
+            </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
               <a href="/blank.html" class="nav-link" id="category-management_blank">
                 <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
