create reception UI, function mapping user-car

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -106,9 +106,9 @@
                 <button class="btn btn-success btn-sm ms-auto ml-2" id="new-car-btn">
                   <i class="fa-solid fa-plus mr-1"></i> Thêm xe
                 </button>
-                <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="editBrand_btn">
-                  <i class="fa-solid fa-pencil mr-1"></i> Sửa tên hãng
-                </button> -->
+                <button class="btn btn-info btn-sm ms-auto ml-2" id="user-mapping-btn">
+                  <i class="fa-solid fa-key mr-1"></i> Đăng ký sở hữu
+                </button>
                 
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
                   <i class="fa-solid fa-car-side mr-1"></i> Thêm mẫu
