--- a/src/main/resources/templates/option-list.html
+++ b/src/main/resources/templates/option-list.html
@@ -103,7 +103,7 @@
               <div class="card-header d-flex align-items-center">
                 <h3 class="card-title">Bảng danh sách tùy chọn dịch vụ</h3>
                 
-                <button class="btn btn-success btn-sm ms-auto ml-2" id="new-account-btn">
+                <button class="btn btn-success btn-sm ms-auto ml-2" id="new-option-btn">
                   <i class="fa-solid fa-plus mr-1"></i> Thêm option
                 </button>
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="editBrand_btn">
@@ -129,7 +129,7 @@
                       <th scope="col" style="text-align: center" min-width="20%">Option</th>
                       <th scope="col" style="text-align: center" min-width="40%">Các dịch vụ sử dụng</th>
                       <th scope="col" style="text-align: center" width="10%">Trạng thái</th>
-                      <th scope="col" style="text-align: center" width="14%">Thao tác</th>
+                      <th scope="col" style="text-align: center" max-width="14%">Thao tác</th>
                     </tr>
                   </thead>
                   <tbody>
