--- a/src/main/resources/templates/service-list.html
+++ b/src/main/resources/templates/service-list.html
@@ -111,9 +111,9 @@
                 <button class="btn btn-success btn-sm ms-auto ml-2" id="new-service-btn">
                   <i class="fa-solid fa-plus mr-1"></i> Thêm dịch vụ
                 </button>
-                <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="editBrand_btn">
-                  <i class="fa-solid fa-pencil mr-1"></i> Sửa tên hãng
-                </button> -->
+                <button class="btn btn-info btn-sm ms-auto ml-2" id="copy-service-btn">
+                  <i class="fa-regular fa-clone mr-1"></i> Copy dịch vụ
+                </button>
                 
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
                   <i class="fa-solid fa-car-side mr-1"></i> Thêm mẫu
@@ -131,10 +131,10 @@
                   <thead>
                     <tr>
                       <th scope="col" style="text-align: center" width="4%">#</th>
-                      <th scope="col" style="text-align: center" min-width="25%" width="40%">Dịch vụ</th>
+                      <th scope="col" style="text-align: center" min-width="30%" width="40%">Dịch vụ</th>
                       <th scope="col" style="text-align: center" min-width="25%">Tùy chọn (Option)</th>
-                      <th scope="col" style="text-align: center" width="10%">Trạng thái</th>
-                      <th scope="col" style="text-align: center" width="14%">Thao tác</th>
+                      <th scope="col" style="text-align: center" min-width="10%">Trạng thái</th>
+                      <th scope="col" style="text-align: center" max-width="14%">Thao tác</th>
                     </tr>
                   </thead>
                   <tbody>
