set up reception interface with backend history and detail history api

--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -7,7 +7,7 @@
     <title>Spring Detailing | Blank Page</title>
   
   <!-- jQuery -->
-  <script src="/plugins/jquery/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- Google Font: Source Sans Pro -->
@@ -66,7 +66,7 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#" class="text-dark">Trang chủ</a></li>
               <li class="breadcrumb-item active">Blank Page</li>
             </ol>
           </div>
