--- a/src/main/resources/templates/include/customize.css
+++ b/src/main/resources/templates/include/customize.css
@@ -17,6 +17,14 @@ input.select2-search__field{
 
 /* Tạo hiệu ứng cho dòng được chọn */
 table.dataTable tbody tr.selected {
-  background-color: #6bb3ff !important; /* Màu nền khi chọn */
+  background-color: #007bff !important; /* Màu nền khi chọn */
   color: white; /* Màu chữ khi chọn */
+}
+
+.breadcrumb-item {
+  font-weight: bold;
+}
+
+.hover-underline:hover {
+  text-decoration: underline;
 }
