loading service to reception UI, new table: Common Paramaters

--- a/src/main/resources/templates/account-list.html
+++ b/src/main/resources/templates/account-list.html
@@ -103,8 +103,8 @@
                 <button class="btn btn-success btn-sm ms-auto ml-2" id="new-account-btn">
                   <i class="fa-solid fa-plus mr-1"></i> Thêm tài khoản
                 </button>
-                <button class="btn btn-info btn-sm ms-auto ml-2" id="editBrand_btn">
-                  <i class="fa-solid fa-pencil mr-1"></i> Sửa tên hãng
+                <button class="btn btn-info btn-sm ms-auto ml-2" id="reset-password-btn" disabled>
+                  <i class="fa-solid fa-pencil mr-1"></i> Đặt lại mật khẩu
                 </button>
                 
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
