--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,6 +42,7 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+  <link rel="stylesheet" href="/include/customize.css">
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
@@ -66,7 +67,7 @@
       />
     </div>
 
-    <div id="OTP-box" class="modal fade modal-custom" tabindex="-1" role="dialog">
+    <div id="OTP-box" class="modal fade modal-custom" tabindex="-1" role="dialog" data-backdrop="static">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content d-flex justify-content-center align-items-center">
           <div class="card p-2 text-center">
