--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -20,6 +20,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/include/customize.css">
   </head>
 
 <body class="hold-transition sidebar-mini layout-navbar-fixed">
