--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -7,12 +7,12 @@
 <!-- Sidebar -->
 <div class="sidebar">
   <!-- Sidebar user panel (optional) -->
-  <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+  <div class="user-panel my-2 d-flex justify-content-center">
     <div class="image">
-      <img src="dist/img/mechanic.png" class="rounded elevation-2" alt="User Image" />
+      <img src="dist/img/mechanic.png" class="rounded" alt="User Image" />
     </div>
     <div class="info">
-      <a href="#" class="d-block">GUEST</a>
+      <a id="user-name-sidebar" href="#" class="d-block h5 text-center font-space-grotesk">Guest</a>
     </div>
   </div>
   <!-- SidebarSearch Form -->
@@ -101,12 +101,6 @@
               <a href="/blank.html" class="nav-link" id="category-management_blank">
                 <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
                 <p>Blank page</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="pages/layout/top-nav.html" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Top Navigation</p>
               </a>
             </li>
           </ul>
