--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,6 +23,7 @@
     />
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/adminlte.min.css" />
+  <link rel="stylesheet" href="/include/customize.css">
   </head>
 
   <body class="hold-transition login-page">
