--- a/src/main/resources/templates/service-list.html
+++ b/src/main/resources/templates/service-list.html
@@ -173,9 +173,6 @@
   </div>
   <!-- ./wrapper -->
 
-
-  <!-- Bootstrap 4 -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- DataTables  & Plugins -->
   <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
@@ -203,6 +200,8 @@
   <script src="plugins/jquery-mapael/maps/usa_states.min.js"></script>
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
+  <!-- Bootstrap -->
+  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <script src="/dist/js/services/refreshTokenService.js"></script>
 
