--- a/src/main/resources/templates/staff-service-reception.html
+++ b/src/main/resources/templates/staff-service-reception.html
@@ -30,6 +30,9 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+  <!-- EKKOLightbox CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -152,7 +155,7 @@
                         <div class="form-group">
                           <label>Tìm biển số xe</label>
                           <div class="input-group">
-                            <input id="num-plate-search-input" type="text" class="form-control" placeholder="Nhập biển kiếm soát">
+                            <input id="num-plate-search-input" type="text" class="form-control" placeholder="Nhập biển kiểm soát">
                             <span class="input-group-append">
                               <button id="num-plate-search-btn" type="button" class="btn btn-default"
                               ><i class="fa-solid fa-magnifying-glass fa-beat-fade" style="color: #007bff;"></i></button>
@@ -174,10 +177,8 @@
                       <div class="col-md-3">
                         <div class="form-group">
                           <label>Hãng xe</label>
-                          <div class="input-group">
-                            <select id="brand-select" class="form-control select2" style="width: 100%;" data-placeholder="Chọn hãng xe">
-                            </select>
-                          </div>
+                          <select id="brand-select" class="form-control select2" style="width: 100%;" data-placeholder="Chọn hãng xe">
+                          </select>
                         </div>
                       </div>
 
@@ -205,7 +206,7 @@
                         <div class="form-group" width="100%">
                           <div class="container">
                               <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <label class="mb-0" for="description_input">Mô tả chi tiết</label>
+                                  <label class="text-truncate mb-0" for="description_input">Mô tả chi tiết</label>
                                   <kbd id="description_counter" class="py-0 small">0/1000</kbd>
                               </div>
                           </div>
@@ -257,6 +258,7 @@
                     <div class="row mt-auto">
                       <div class="col-md-12 d-flex justify-content-end">
                         <button id="show-history-btn" type="button" class="btn btn-outline-info ml-auto" hidden><i class="fa-regular fa-eye"></i> Xem</button>
+                        <button id="reload-history-list-btn" type="button" class="btn btn-outline-dark ml-2" disabled>Làm mới</button>
                         <button id="new-history-btn" type="button" class="btn btn-success ml-2" disabled>Thêm mới</button>
                       </div>
                     </div>
@@ -279,8 +281,8 @@
                   </h4>
                 </div>
                 <div class="col-12 col-sm-6 d-flex align-items-center align-items-sm-start">
-                  <button type="button" class="btn btn-outline-info py-1 ml-sm-auto" id="add-detail-btn"><i class="fa-regular fa-square-plus"></i> Add</button>
-                  <button type="button" class="btn btn-outline-warning py-1 ml-2" id="edit-detail-btn"><i class="fa-solid fa-pen"></i> Edit</button>
+                  <button type="button" class="btn btn-outline-info py-1 ml-sm-auto" id="add-detail-btn"><i class="fa-solid fa-pen"></i> Chỉnh sửa</button>
+                  <button type="button" class="btn btn-outline-danger py-1 ml-2" id="delete-detail-btn" hidden><i class="fa-regular fa-trash-can"></i> Xóa</button>
                 </div>
                 <!-- /.col -->
               </div>
@@ -288,29 +290,35 @@
               <div class="row invoice-info">
                 <div class="col-sm-4 invoice-col">
                   From
-                  <address>
+                  <address id="company-info">
                     <strong>Spring, Inc.</strong><br>
                     Đồng Văn Cống, An Thới,<br>
                     Bình Thủy, Cần Thơ<br>
-                    Phone: <a href="tel:+84818700047" class="text-dark hover-underline">(+84) 81 8700047</a><br>
-                    Email: <a href="mailto:lhduyanh2002@gmail.com" class="text-dark hover-underline">lhduyanh2002@gmail.com</a>
+                    Phone: <a id="company-phone" href="tel:+84818700047" class="text-dark hover-underline">(+84) 81 8700047</a><br>
+                    Email: <a id="company-email" href="mailto:lhduyanh2002@gmail.com" class="text-dark hover-underline">lhduyanh2002@gmail.com</a>
                   </address>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 invoice-col">
                   To<button id="edit-user-btn" type="button" class="btn btn-sm btn-outline-dark ml-2 py-0" data-state="add">Sửa</button>
-                  <address>
+                  <address id="customer-info">
                     <strong><span id="customer-name">Khách vãng lai</span></strong><br>
-                    <span id="customer-address"></span><br>
-                    <span id="customer-phone">Phone: </span><br>
-                    <span id="customer-email">Email: </span><br>
+                    <span id="customer-address"><br></span>
+                    <span id="customer-phone"><br></span>
+                    <span id="customer-email"></span><br>
                   </address>
                 </div>
                 <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-4 invoice-col" id="advisor-invoice-info">
                   <b><span id="invoice-id"></span></b><br>
                   <b>Service Date: </b><span id="history-date"></span><br>
-                  <b>Odo:</b> <span id="odo-info">Không xác định</span><br>
+
+                  <div class=" hover-underline-animation left" role="button">
+                    <b style="display: inline-block; margin-right: 3px;">Odo:</b>
+                    <input id="odo-info" type="text" class="form-control h-auto w-auto p-0 d-inline-block" 
+                          placeholder="Không xác định" style="border: none;" maxlength="15">
+                  </div><br>
+                  
                   <span id="advisor-name">Advisor: </span><br>
                   <span id="advisor-contact">Email: </span><br>
                 </div>
@@ -376,7 +384,8 @@
                         <th class="col-sm-5 col-12">Discount (%)</th>
                         <td class="col-sm-7 col-12">
                           <div class="dropdown w-100" style="z-index: 1000;">
-                            <input id="discount-info" type="text" class="form-control dropdown-toggle h-auto w-100 p-0" placeholder="0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="border: none; z-index: 1000;" value="0">
+                            <input id="discount-info" type="text" class="form-control dropdown-toggle h-auto w-100 p-0" placeholder="0" 
+                            aria-haspopup="true" aria-expanded="false" style="border: none; z-index: 1000;" value="0" maxlength="5" data-toggle="dropdown">
                             <div class="dropdown-menu overflow-auto" aria-labelledby="discount-info" style="z-index: 1000; height: 150px;">
                               <a class="dropdown-item discount-suggestion" role="button">5%</a>
                               <a class="dropdown-item discount-suggestion" role="button">10%</a>
@@ -405,31 +414,58 @@
 
               <!-- this row will not appear when printing -->
               <div class="row no-print">
-                <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-start mb-2 mb-md-0">
-                  <a id="save-invoice-info-btn" target="_blank" class="btn btn-outline-success mr-md-2 mr-auto">
+                <div class="col-12 col-md-6 d-flex justify-content-between justify-content-md-start flex-wrap mb-2 mb-md-0">
+                  <a id="save-invoice-info-btn" target="_blank" 
+                     class="btn btn-outline-success mr-md-2" 
+                     data-toggle="tooltip" 
+                     title="Lưu thông tin odo, tóm tắt, phân tích và giảm giá (% discount)">
                     <i class="fa-regular fa-floppy-disk"></i> Save
                   </a>
-                  <a href="invoice-print.html" rel="noopener" target="_blank" class="btn btn-default">
+                  <a href="#" type="button" class="btn btn-outline-primary mr-md-2">
+                    <i class="fas fa-download"></i> PDF
+                  </a>
+                  <a href="/pages/examples/invoice-print.html" rel="noopener" target="_blank" 
+                     class="btn btn-default">
                     <i class="fas fa-print"></i> Print
                   </a>
                 </div>
-              
+                
                 <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end">
-                  <button type="button" class="btn btn-success mr-md-2 mr-auto">
-                    <i class="far fa-credit-card"></i> Submit Payment
+                  <button type="button" class="btn btn-danger mr-md-2 mr-auto">
+                    <i class="fas fa-download"></i> Hủy đơn
                   </button>
-                  <button type="button" class="btn btn-primary">
-                    <i class="fas fa-download"></i> Generate PDF
+                  <button type="button" class="btn btn-success">
+                    <i class="far fa-credit-card"></i> Đã thanh toán
                   </button>
                 </div>
-              </div>              
+              </div>      
             </div>
             <!-- /.invoice -->
+
+
+            <div class="card card-default">
+              <div class="card-header">
+                <h3 class="card-title">Upload hình ảnh</h3>
+              </div>
+
+              <div class="card-body">
+                <div class="upload__box">
+                  <div class="upload__btn-box">
+                    <label class="upload__btn">
+                      <span>Upload images</span>
+                      <input type="file" multiple="" data-max_length="5" class="upload__inputfile">
+                    </label>
+                  </div>
+                  <div class="upload__img-wrap"></div>
+                </div>
+              </div>
+            </div>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
+     
     <div id="modal-card"></div>
     <script>
       $("#modal-card").load("/include/modal.html")
@@ -473,16 +509,19 @@
   <script src="/plugins/datatables-buttons/js/buttons.print.min.js"></script>
   <script src="/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
   
+  <!-- ekko-lightbox -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
   <!-- PAGE PLUGINS -->
   <!-- jQuery Mapael -->
-  <script src="plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
-  <script src="plugins/raphael/raphael.min.js"></script>
-  <script src="plugins/jquery-mapael/jquery.mapael.min.js"></script>
-  <script src="plugins/jquery-mapael/maps/usa_states.min.js"></script>
+  <script src="/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+  <script src="/plugins/raphael/raphael.min.js"></script>
+  <script src="/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+  <script src="/plugins/jquery-mapael/maps/usa_states.min.js"></script>
   <!-- ChartJS -->
-  <script src="plugins/chart.js/Chart.min.js"></script>
+  <script src="/plugins/chart.js/Chart.min.js"></script>
   <!-- Bootstrap -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <script src="/dist/js/services/refreshTokenService.js"></script>
 
